...
        surfaceContainerHigh = Color(0xFF242727),
        surfaceContainerHighest = Color(0xFF2F3232),
        outline = Color(0xFF899393),
        outlineVariant = Color(0xFF3F4849),
        inverseSurface = Color(0xFFE2E3E3),
        inverseOnSurface = Color(0xFF1A1D1D),
        scrim = Color(0xFF000000),
    )

private val LightColorScheme =
    lightColorScheme(
        primary = Highlight,
        onPrimary = OnHighlight,
...
